--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 0 50px 0;
 }
 
 article,
@@ -869,9 +869,6 @@ ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 0;
 }
 
