--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1540,3 +1540,11 @@ li:first-of-type {
     margin-left: 0;
   }
 }
+
+/*Image*/
+
+.img-responsive {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
